# drytorch

./: .coverage.pop-os.36793.Xenloeox  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pre-commit-config.yaml  pyproject.toml  ruff.toml
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml  create_tag.yaml  create_version.yaml  prepare_release.yaml  publish.yaml
custom_trainer/: checkpoint_manager.py  context_managers.py  data_manager.py  dataset_utils.py  dict_list.py  exceptions.py  experiment_tracker.py  metrics_and_loss_base_classes.py  model_handler.py  module_interface.py  optional_containers.py  plotters.py  protocols.py  recursive_ops.py  schedulers.py  trainer.py
docs/: README.md  README_RTD.md  architecture.md  conf.py  index.rst
docs/_build/.jupyter_cache/: global.db
docs/tutorials/: experiments_and_run.ipynb  experiments_and_run.md  experiments_and_runs.ipynb  experiments_and_runs.md  flower.npy  getting_started.ipynb  getting_started.md  metrics_and_losses.ipynb  metrics_and_losses.md  trackers.ipynb  trackers.md
dry_torch/: __init__.py  checkpoint_manager.py  data_manager.py  dict_list.py  doc_utils.py  experiment_tracker.py  model_handler.py  model_optimizer.py  optional_containers.py  plotters.py  protocols.py  recursive_ops.py  trainer.py
src/custom_trainer/: __init__.py  context_managers.py  dict_list.py  recursive_ops.py  schedulers.py  trainer.py  utils.py
src/dry_torch/: __init__.py  aggregator.py  aggregators.py  apply_ops.py  averages.py  binding.py  builtin_logger.py  calculating.py  checkpoint.py  checkpoint_utils.py  checkpointing.py  data_types.py  default_logging.py  descriptors.py  evaluating.py  events.py  exceptions.py  experiments.py  hooks.py  io.py  learning.py  loading.py  log_backend.py  log_events.py  log_metadata.py  log_settings.py  loss_and_metrics.py  metrics.py  model.py  model_binding.py  model_bindings.py  model_utils.py  modelling.py  plotting.py  protocols.py  recursive_ops.py  registering.py  repr_utils.py  saving_loading.py  schedulers.py  (+5 more)
src/dry_torch/backends/: hydra_backend.py  sqlalchemy_backend.py  tqdm_backend.py  weights_and_biases_backend.py
src/dry_torch/trackers/: abstract_dumper.py  base_classes.py  builtin_logger.py  csv.py  csv_dumper.py  default_handler.py  hydra.py  hydra_backend.py  hydra_link.py  logging.py  matplotlib.py  metadata.py  pandas_backend.py  plotly.py  sqlalchemy.py  sqlalchemy_backend.py  tensorboard.py  tqdm.py  tqdm_logger.py  visdom.py  wandb.py  weights_and_biases_backend.py  yaml.py  yaml_dumper.py
src/dry_torch/utils/: apply_ops.py  averages.py  repr_utils.py
src/drytorch/: __init__.py  checkpointing.py  checkpoints.py  evaluating.py  evaluations.py  exceptions.py  experiments.py  gradient_ops.py  hooks.py  learn.py  learning.py  load.py  loading.py  log_events.py  metrics.py  models.py  objectives.py  protocols.py  registering.py  runners.py  running.py  schedulers.py  tracking.py  train.py  training.py
src/drytorch/contrib/: __init__.py  from_torchmetrics.py  optuna.py  swa_utils.py  torcheval.py  torchmetrics.py
src/drytorch/core/: __init__.py  exceptions.py  experiment.py  experimenting.py  experiments.py  log_events.py  protocols.py  register.py  registering.py  track.py  tracking.py
src/drytorch/lib/: aggregators.py  checkpoints.py  evaluations.py  hooks.py  (+9 more)
src/tests/: test_dict_list.py  test_recursive_ops.py
tests/: __init__.py  conftest.py  example_classes.py  simple_classes.py  test.yml  test_checkpoint.py  test_context_managers.py  test_dict_list.py  test_imports.py  test_logging.py  test_loss_and_metrics.py  test_model_optimizer.py  test_model_optimizer_and_schedulers.py  test_model_optimizer_schedulers.py  test_on_jupyter.ipynb  test_optional_containers.py  test_plotter.py  test_recursive_ops.py  test_repr.py  test_struc_repr.py  test_sweep.py  test_trainer.py  test_training.py
tests/.ipynb_checkpoints/: test_on_jupyter-checkpoint.ipynb
tests/functional/: __init__.py  conftest.py  simple_classes.py  test_Trainer.py  test_hyperparameter_tuning.py  test_sweep.py  test_training_cycle.py  test_tuning.py
tests/integration/: __init__.py  conftest.py  simple_classes.py  test_experiment_multiprocessing.py  test_local_checkpoint.py  test_trainer.py  test_training_cycle.py
tests/trackers/: conftest.py  test_abstract_dumper.py  test_csv.py  test_hydra.py  test_hydra_link.py  test_logging.py  test_pyaml.py  test_sqlalchemy.py  test_tqdm.py  test_tqdm_builtin_logger_integration.py  test_wandb.py  test_wandb_functional.py
tests/units/: __init__.py  conftest.py  test_aggregators.py  test_apply_ops.py  test_averages.py  test_calculating.py  test_checkpoint.py  test_checkpointing.py  test_checkpoints.py  test_diagnostic.py  test_evaluating.py  test_evaluations.py  test_experiments.py  test_gradient_ops.py  test_hooks.py  test_init.py  test_learn.py  test_learning.py  test_load.py  test_loading.py  test_metrics.py  test_models.py  test_objectives.py  test_recursive_ops.py  test_registering.py  test_repr_utils.py  test_runners.py  test_running.py  test_schedulers.py  test_tracking.py  test_train.py  test_training.py
tutorials/: Getting started.ipynb  getting_started.ipynb  metrics_and_losses.ipynb
(+160 files in other folders)
