[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dry-torch"
version = "0.0.1"
authors = [{ name = "Nicolas Vercheval", email = "nicolas.vercheval@ugent.be" }]
description = "This package helps train, document and evaluate a Pytorch model."
keywords = ["pytorch", "logger"]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch >= 2.1",
    "numpy",
    "PyYAML >= 6.0",
]

[project.optional-dependencies]
all_trackers = [
    "plotly",
    "tqdm",
    "visdom",
    "pandas",
    "sqlalchemy",
    "wandb",
    "seaborn",
    "scikit-learn",
    "torchvision",
    "huggingface-datasets",
    "tqdm",
    "torchmetrics",]
dev = ["pytest", "pytest-mock"]

[tool.setuptools.package-data]
"dry_torch" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Repository = "https://github.com/nverchev/dry_torch"
Issues = "https://github.com/nverchev/dry_torch/issues"
Changelog = "https://github.com/nverchev/dry_torch/blob/master/CHANGELOG.md"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
#    "tests/functional",
    "--strict-markers",
    "--ignore=tests/test_plotter.py",
]
log_cli = true
log_cli_level = "DEBUG"

[tool.mypy]
mypy_path = "src.dry_torch"
namespace_packages = false
files = ["src", "tests"]