[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dry-torch"
version = "0.0.1"
authors = [{ name = "Nicolas Vercheval", email = "nicolas.vercheval@ugent.be" }]
description = "This package helps train, document and evaluate a Pytorch model."
keywords = ["pytorch", "logger"]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch >= 2.4.1",
    "numpy",
]

[project.optional-dependencies]
default_trackers = [
    "PyYAML >= 6.0",
    "tqdm",
    "plotly",
]

all_trackers = [
    "dry-torch[default_trackers]",
    "visdom",
    "sqlalchemy",
    "wandb",
    "seaborn",
    "torchvision",
    "huggingface-datasets",
]

support = [
    "torchmetrics",
    "pandas",
]

dev = ["pytest", "pytest-mock"]

all = [
    "dry-torch[all_trackers]",
    "dry-torch[support]",
    "dry-torch[dev]",
]


#[tool.coverage.run]
#source = ["dry_torch"]

[tool.setuptools.package-data]
"dry_torch" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
include-package-data = true

[project.urls]
Repository = "https://github.com/nverchev/dry_torch"
Issues = "https://github.com/nverchev/dry_torch/issues"
Changelog = "https://github.com/nverchev/dry_torch/blob/master/CHANGELOG.md"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
#    "--cov=.",
#    "--cov-report=term-missing",
#    "--cov-report=html",
]
log_cli = true
log_cli_level = "WARNING"

[tool.mypy]
mypy_path = "."
namespace_packages = false
files = ["src", "tests"]
