[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drytorch"
version = "0.0.1"
authors = [{ name = "Nicolas Vercheval", email = "nicolas.vercheval@ugent.be" }]
description = "This package helps train, document and evaluate a Pytorch model."
keywords = ["pytorch", "logger"]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch >= 2.5.1",
    "numpy",
]

[project.optional-dependencies]
recommended_trackers = [
    "PyYAML >= 6.0",
    "tqdm",
]

all_trackers = [
    "drytorch[recommended_trackers]",
    "hydra-core",
    "matplotlib",
    "plotly",
    "sqlalchemy",
    "tensorboard",
    "visdom",
    "wandb",
]

support = [
    "torchmetrics",
    "pandas",
]

dev = ["pytest", "pytest-mock"]

third_party_stubs = [
    "pandas-stubs",
    "plotly-stubs",
    "tqdm-stubs",
    "types-PyYAML",
]

all = [
    "drytorch[all_trackers]",
    "drytorch[support]",
    "drytorch[dev]",
    "drytorch[third_party_stubs]",
]


#[tool.coverage.run]
#source = ["drytorch"]

[tool.setuptools.package-data]
"drytorch" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Repository = "https://github.com/nverchev/drytorch"
Issues = "https://github.com/nverchev/drytorch/issues"
Changelog = "https://github.com/nverchev/drytorch/blob/master/CHANGELOG.md"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
#    "--cov=.",
#    "--cov-report=term-missing",
#    "--cov-report=html",
]
log_cli = true
log_cli_level = "WARNING"

[tool.mypy]
mypy_path = "."
namespace_packages = false
files = ["src", "tests"]
